# routes/third_party_account.js
@@ -8,13 +8,14 @@ const apiUtils = require('../util/apiUtils');
 const oauth_sheet_helper = require('../util/oauth_sheet_helper');
 const logger = require('../util/logger');
 const check_form_author = require('../middleWareFun/check_form_author');
+const refresh_token_provider = require('../middleWareFun/refresh_token_provider');
 const errorMessages = require('../util/errorMessages');
 
 /**
  * create google sheet with form data
  * @param {*} formId
  */
-router.post("/oauth/createSheets",check_form_author, (req, res) => {
+router.post("/oauth/createSheets",[check_form_author,refresh_token_provider], (req, res) => {
   logger.debug('inside oauth create sheet');
   var flag = false;
   var email=req.body.supportive_email;
@@ -98,68 +99,6 @@ router.post("/oauth/createSheets",check_form_author, (req, res) => {
       'error' : err
      })
   })
-})
-
-
-router.put("/put/switch/:integrationId", (req, res) => {
-  logger.debug('inside swictch integration');
-  const token = req.headers['access-token'];
-  const {switch_from,switch_to,form_id} = req.body;
-  const {integrationId} = req.params;
-  let delete_flag=false;
-  if(switch_to && form_id){
-    logger.debug('fetching access switch_to user');
-    let headerData={
-      method: 'PUT',
-      headers: {
-        'access-token': token,
-        'Content-Type': 'application/json',
-        'Accept': 'application/json',
-        'supportive_email': switch_to
-      },
-      body:JSON.stringify({   
-      "property": form_id,
-      "delete_flag": delete_flag
-      })
-    }
-    const endpoint="auth/api/oauth/edit/account/";
-    const url=config.AUTH_SERVICE_BASE_URL+endpoint+integrationId
-    fetch(url,headerData)
-    .then(res => res.status)
-    .then(status => {
-      logger.debug('check switch_to status');
-      if(status==HttpStatus.OK){
-        logger.debug('fetching access switch_from user');
-        headerData.body["delete_flag"]=true;
-        headerData.headers['supportive_email']=switch_from;
-        return fetch(url,headerData)
-      }
-      else {
-        logger.debug('delete not setted')
-        return Promise.reject(errorMessages.DELETE_NOT_SET);
-      }
-    })
-    .then(res => res.status)
-    .then(status=>{
-      logger.debug('check switch_from status');
-      if(status==HttpStatus.OK){
-        let message='access switched';
-        logger.debug(message);
-        res.status(HttpStatus.OK).json({message});
-      }else{
-        logger.debug(errorMessages.DELETE_NOT_SET);
-        return Promise.reject(errorMessages.DELETE_NOT_SET);
-      }
-    })
-    .catch(err => {
-      logger.error(errorMessages.INTERNAL_SERVER_ERROR+err);
-      res.status(HttpStatus.INTERNAL_SERVER_ERROR).json(apiUtils.getResponse(errorMessages.INTERNAL_SERVER_ERROR+err,HttpStatus.INTERNAL_SERVER_ERROR))
-    })
-  }else {
-    let message='unauthorized';
-    logger.debug(message);
-    res.status(HttpStatus.UNAUTHORIZED).json(apiUtils.getResponse(message+err,HttpStatus.UNAUTHORIZED))
-  } 
 });
 
 module.exports = router;
